--- a/public/guest/scss/_color.scss
+++ b/public/guest/scss/_color.scss
@@ -10,7 +10,7 @@ $gray:#f7f7fd;
 $heading-color:#000;
 
 //Theme color
-$theme-color: #fc3f00;
+$theme-color: #0d6efd;
 $theme-color2: #222222;
 $theme-color3: #f27420;
 $theme-color4: #ff3500;
