--- a/public/guest/scss/_footer.scss
+++ b/public/guest/scss/_footer.scss
@@ -212,7 +212,7 @@
             content: "";
             width: 38px;
             height: 3px;
-            background:#fc3f00;
+            background:#0d6efd;
             top: -50px;
             top: -24px;
             left: 0;
