xhange folder admin

--- a/public/guest/scss/_wecky-new.scss
+++ b/public/guest/scss/_wecky-new.scss
@@ -9,14 +9,14 @@
             margin-left: 15px;
             margin-right: 15px;
             .weekly-img{
-               
+
                 img{
                     width: 100%;
                     border-radius: 6px;
                 }
             }
             .weekly-caption{
-               
+
                 position: absolute;
                 bottom: 0px;
                 left: 0;
@@ -39,7 +39,7 @@
                     margin-bottom: 15px;
                     display: inline-block;
                 }
-                h4{                   
+                h4{
                     a{
                         font-size: 18px;
                         font-weight: 700;
@@ -124,7 +124,7 @@
         margin-right: -15px;
     }
     .slick-active button{
-        background: #fc4902;
+        background: #0d6efd;
         height: 9px;
         width: 38px;
         border-radius: 10px;
