--- a/public/guest/scss/_wecky2-new.scss
+++ b/public/guest/scss/_wecky2-new.scss
@@ -76,7 +76,7 @@
                 margin-right: -15px;
             }
             .slick-active button{
-                background: #fc4902;
+                background: #0d6efd;
                 height: 9px;
                 width: 38px;
                 border-radius: 10px;
