--- a/public/guest/css/main.css
+++ b/public/guest/css/main.css
@@ -61,7 +61,7 @@
 
 /* line 93, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_color.scss */
 .theme-bg {
-  background: #ff656a;
+  background: #0d6efd;
 }
 
 /* line 96, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_color.scss */
@@ -87,7 +87,7 @@
 
 /* line 111, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_color.scss */
 .theme-color {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /*------------------- Responsive --------------------------*/
@@ -98,26 +98,26 @@
 /* line 60, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_variables.scss */
 .boxed-btn {
   background: #fff;
-  color: #ff656a !important;
+  color: #0d6efd !important;
   display: inline-block;
   padding: 18px 44px;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #ff656a;
+  border: 1px solid #0d6efd;
   letter-spacing: 3px;
   text-align: center;
-  color: #ff656a;
+  color: #0d6efd;
   text-transform: uppercase;
   cursor: pointer;
 }
 
 /* line 77, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_variables.scss */
 .boxed-btn:hover {
-  background: #ff656a;
+  background: #0d6efd;
   color: #fff !important;
-  border: 1px solid #ff656a;
+  border: 1px solid #0d6efd;
 }
 
 /* line 82, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_variables.scss */
@@ -507,7 +507,7 @@ hr {
 /* button style */
 /* line 281, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_common.scss */
 .btn {
-  background: #ff656a;
+  background: #0d6efd;
   -moz-user-select: none;
   text-transform: uppercase;
   color: #fff;
@@ -576,11 +576,11 @@ hr {
 .border-btn {
   background: none;
   -moz-user-select: none;
-  border: 2px solid #ff656a;
+  border: 2px solid #0d6efd;
   padding: 18px 38px;
   margin: 10px;
   text-transform: capitalize;
-  color: #ff656a;
+  color: #0d6efd;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
@@ -604,7 +604,7 @@ hr {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #ff656a;
+  background: #0d6efd;
   z-index: -1;
   transition: transform 0.5s;
   transition-timing-function: ease;
@@ -626,7 +626,7 @@ hr {
 
 /* line 395, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_common.scss */
 .send-btn {
-  background: #ff656a;
+  background: #0d6efd;
   color: #fff;
   font-size: 14px;
   width: 100%;
@@ -650,7 +650,7 @@ hr {
   width: 100%;
   height: 100%;
   background: #e6373d;
-  color: #ff656a;
+  color: #0d6efd;
   z-index: -1;
   transition: transform 0.5s;
   transition-timing-function: ease;
@@ -675,7 +675,7 @@ hr {
 /* scrollUp */
 /* line 443, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_common.scss */
 #scrollUp {
-  background: #ff656a;
+  background: #0d6efd;
   height: 50px;
   width: 50px;
   right: 31px;
@@ -2440,7 +2440,7 @@ hr {
   position: relative;
   border-style: solid;
   border-width: 3px;
-  border-top-color: #ff656a;
+  border-top-color: #0d6efd;
   border-bottom-color: transparent;
   border-left-color: transparent;
   border-right-color: transparent;
@@ -3048,7 +3048,7 @@ hr {
 
 /* line 93, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_color.scss */
 .theme-bg {
-  background: #ff656a;
+  background: #0d6efd;
 }
 
 /* line 96, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_color.scss */
@@ -3074,7 +3074,7 @@ hr {
 
 /* line 111, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_color.scss */
 .theme-color {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 3, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
@@ -3211,7 +3211,7 @@ hr {
 
 /* line 81, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
 .header-area .header-top .header-info-right .header-social li a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 92, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
@@ -3258,7 +3258,7 @@ hr {
 
 /* line 119, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
 .main-header .main-menu ul li:hover > a {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 124, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
@@ -3272,7 +3272,7 @@ hr {
   opacity: 0;
   box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.05);
   padding: 17px 0;
-  border-top: 5px solid #ff656a;
+  border-top: 5px solid #0d6efd;
   -webkit-transition: all 0.3s ease-out 0s;
   -moz-transition: all 0.3s ease-out 0s;
   -ms-transition: all 0.3s ease-out 0s;
@@ -3296,7 +3296,7 @@ hr {
 
 /* line 144, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
 .main-header .main-menu ul ul.submenu > li > a:hover {
-  color: #ff656a;
+  color: #0d6efd;
   background: none;
 }
 
@@ -3342,7 +3342,7 @@ hr {
 
 /* line 196, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
 .slicknav_menu .slicknav_icon-bar {
-  background-color: #ff656a !important;
+  background-color: #0d6efd !important;
 }
 
 /* line 199, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
@@ -3363,7 +3363,7 @@ hr {
 /* line 212, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
 .slicknav_menu .slicknav_nav a:hover {
   background: transparent;
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 216, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_headerMenu.scss */
@@ -3469,7 +3469,7 @@ hr {
   line-height: 1.2;
   font-weight: 300;
   margin-bottom: 39px;
-  color: #ff656a;
+  color: #0d6efd;
   margin-bottom: 7px;
   text-transform: uppercase;
 }
@@ -3528,7 +3528,7 @@ hr {
   width: 60px;
   border-radius: 50%;
   cursor: pointer;
-  background: #ff656a;
+  background: #0d6efd;
   -webkit-transition: .4s;
   -o-transition: .4s;
   transition: .4s;
@@ -3644,7 +3644,7 @@ hr {
 
 /* line 24, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-front .profile-img img:hover {
-  border-bottom: 7px solid #ff656a;
+  border-bottom: 7px solid #0d6efd;
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -3668,12 +3668,12 @@ hr {
 
 /* line 43, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-front .profile-caption h4 a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 55, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-back {
-  border: 4px solid #ff656a;
+  border: 4px solid #0d6efd;
   padding: 31px 32px 48px 52px;
   background: #fff;
   overflow: hidden;
@@ -3724,7 +3724,7 @@ hr {
   position: absolute;
   width: 100px;
   height: 4px;
-  background: #ff656a;
+  background: #0d6efd;
   left: 0;
   bottom: 0;
 }
@@ -3741,7 +3741,7 @@ hr {
 
 /* line 105, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-back a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 112, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
@@ -3773,7 +3773,7 @@ hr {
 
 /* line 128, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-front-last .profile-img img:hover {
-  border-bottom: 7px solid #ff656a;
+  border-bottom: 7px solid #0d6efd;
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -3797,12 +3797,12 @@ hr {
 
 /* line 147, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-front-last .profile-caption h4 a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 159, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-back-last {
-  border: 4px solid #ff656a;
+  border: 4px solid #0d6efd;
   padding: 31px 32px 48px 52px;
   background: #fff;
   overflow: hidden;
@@ -3846,7 +3846,7 @@ hr {
   position: absolute;
   width: 100px;
   height: 4px;
-  background: #ff656a;
+  background: #0d6efd;
   left: 0;
   bottom: 0;
 }
@@ -3870,7 +3870,7 @@ hr {
 
 /* line 210, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
 .team-profile .single-profile .single-profile-back-last a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 222, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_team.scss */
@@ -4091,7 +4091,7 @@ hr {
 
 /* line 73, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_services_section.scss */
 .single-services:hover .services-icon span {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 82, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_services_section.scss */
@@ -4244,7 +4244,7 @@ hr {
 
 /* line 81, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_completed-cases.scss */
 .completed-cases .single-cases-img .single-cases-cap h4:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 85, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_completed-cases.scss */
@@ -4475,7 +4475,7 @@ hr {
 
 /* line 110, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_testimonial.scss */
 .h1-testimonial-active:hover button {
-  background: #ff656a;
+  background: #0d6efd;
   color: #fff;
 }
 
@@ -4541,7 +4541,7 @@ hr {
 
 /* line 14, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_recent.scss */
 .recent-area .single-recent-cap .recent-cap span {
-  color: #ff656a;
+  color: #0d6efd;
   font-size: 14px;
   margin-bottom: 20px;
   display: block;
@@ -4557,7 +4557,7 @@ hr {
 
 /* line 26, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_recent.scss */
 .recent-area .single-recent-cap .recent-cap h4 a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 32, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_recent.scss */
@@ -4759,7 +4759,7 @@ hr {
 
 /* line 49, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_footer.scss */
 .footer-area .footer-tittle ul li a:hover {
-  color: #ff656a;
+  color: #0d6efd;
   padding-left: 5px;
 }
 
@@ -4790,13 +4790,13 @@ hr {
   border: 0;
   cursor: pointer;
   padding: 13px 22px;
-  background: #ff656a;
+  background: #0d6efd;
   line-height: 1;
 }
 
 /* line 84, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_footer.scss */
 .footer-area .info.error {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 89, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_footer.scss */
@@ -4813,7 +4813,7 @@ hr {
 
 /* line 94, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_footer.scss */
 .footer-area .footer-social a i:hover {
-  color: #ff656a;
+  color: #0d6efd;
   box-shadow: 0 -3px 0 0 rgba(24, 24, 24, 0.15) inset, 0 3px 10px rgba(0, 0, 0, 0.3);
   -webkit-transform: translateY(-3px);
   -moz-transform: translateY(-3px);
@@ -4850,12 +4850,12 @@ hr {
 
 /* line 125, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_footer.scss */
 .footer-bottom-area .footer-copy-right p i {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 128, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_footer.scss */
 .footer-bottom-area .footer-copy-right p a {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 3, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_services.scss */
@@ -4875,7 +4875,7 @@ hr {
   content: "";
   width: 75px;
   height: 3px;
-  background: #ff656a;
+  background: #0d6efd;
   left: 0;
   top: 52%;
   transform: translateY(-50%);
@@ -4904,7 +4904,7 @@ hr {
 
 /* line 14, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
 .blog_area a:hover, .blog_area a :hover {
-  background: -webkit-linear-gradient(131deg, #ff656a 0%, #ff656a 99%);
+  background: -webkit-linear-gradient(131deg, #0d6efd 0%, #0d6efd 99%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-decoration: none;
@@ -5432,7 +5432,7 @@ hr {
 
 /* line 544, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
 .blog_details a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 549, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
@@ -5500,7 +5500,7 @@ hr {
   left: 10px;
   display: block;
   color: #fff;
-  background-color: #ff656a;
+  background-color: #0d6efd;
   padding: 8px 15px;
   border-radius: 5px;
 }
@@ -5595,7 +5595,7 @@ hr {
 
 /* line 694, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
 .blog_right_sidebar .search_widget .input-group button {
-  background: #ff656a;
+  background: #0d6efd;
   border-left: 0;
   border: 1px solid #f0e9ff;
   padding: 4px 15px;
@@ -5733,7 +5733,7 @@ hr {
 
 /* line 845, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
 .blog_right_sidebar .tag_cloud_widget ul li a:hover {
-  background: #ff656a;
+  background: #0d6efd;
   color: #fff !important;
   -webkit-text-fill-color: #fff;
   text-decoration: none;
@@ -5981,7 +5981,7 @@ hr {
 
 /* line 1211, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
 .single-post-area .blog-author a:hover {
-  color: #ff656a;
+  color: #0d6efd;
 }
 
 /* line 1216, ../../SAIFUL/Running_project/248. Magazine & News/assets/scss/_blog_page.scss */
